changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Make monsters hit doors with attack damage rather than fixed 1000 damage.
Andreas Kirschbaum 2009-06-24

Make bullet swarm spells fire three tiles wide.
Andreas Kirschbaum 2009-06-23

Change movement of ball spells.
Andreas Kirschbaum 2009-06-22

Make missile and ball spells hit targets adjacent to the caster. Formerly the
spell did start one tile away.
Andreas Kirschbaum 2009-06-22

Limit missile spells to turn at most one direction per turn.
Andreas Kirschbaum 2009-06-22

Make missile and ball spells target a random part for multi-tiled objects.
Andreas Kirschbaum 2009-06-22

Fix array out-of-bounds accesses for monsters having stats > 30. Makes
trolls pick up boulders.
Andreas Kirschbaum 2009-06-22

Do not teleport character to savebed when re-logging in in a random map.
Andreas Kirschbaum 2009-06-21

Make monsters take the shortest route to the player.
Andreas Kirschbaum 2009-06-20

Suppress error messages about non-existing items for "apply -a" on already
applied items or "apply -u" un unapplied items.
Andreas Kirschbaum 2009-06-20

Make singing and oratory skills work against multi-tiled monsters.
Andreas Kirschbaum 2009-06-20

Retain unaggressive flag for splitting monsters.
Andreas Kirschbaum 2009-06-19

Prevent black puddings from jumping over walls.
Andreas Kirschbaum 2009-06-19

Insert dropped objects below the player.
Andreas Kirschbaum 2009-06-18

Allow monsters to pick up "throwable" items as weapons.
Andreas Kirschbaum 2009-06-18

Change weight check for monsters in object_get_pick(): replace
"item_weight <= picker_weight/3" with